fixed size of ledger height and gave it scrollbars
now the ledger itself takes up one screen. There will be double scrollbars
(one for the leger, one for the browser) once other widgets are added, and
I;m not sure if that's a good idea. The alternative it the date range
dictates the length of the page, possibly pushing widgets above and below
the ledger far apart. I will have to make more widgets before this can be
determined.

For now it works, as the range selector sub-widget stays in place.

--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,18 @@ body{
 }
 
 div.ledger_widget{
-    width:1200px;
     border:thick solid black;
     background-color:#E3E4FA;
     padding: 10px;
     display:block;
     float:left;
     font-size:12;
+}
+
+div.ledger_fields{
+    width:1200px;
+    height:550px;
+    overflow:auto;
 }
 
 div.ledger_entry_1{
